Change post comment such that after u submit a comment, the message that u typed in the comment form is cleared. Also added two css styles for post and comment so that long texts or comments stay inside post component, (stay within a box) instead of extending out of it and out of the screen. An important bug, when you write a description for a post, if that description is 255 chars long (just the allowed maximum size), upon submiting the post, the new post with that description becomes hidden. Upon refreshing that post disappears. I dont know if that has to do with my css or not.

--- a/src/index.css
+++ b/src/index.css
@@ -1158,6 +1158,26 @@ Task Group page
   color: #17a2b8;
 }
 
+.post-text {
+  width:860px;
+  padding-top:5px;
+  border-width:1px;
+  padding-left:13px;
+  padding-bottom:10px;
+  overflow-wrap: break-word;
+  text-align: left;
+}
+
+.post-comment {
+  width:800px;
+  padding-top:5px;
+  border-width:1px;
+  padding-left:13px;
+  padding-bottom:10px;
+  overflow-wrap: break-word;
+  text-align: left;
+}
+
 @media (min-width: 800px) {
 
   #hamburger-menu {
